# relay-server

./: .gitignore  README.md  openapi.yaml
.github/workflows/: release.yml
crates/: .gitignore  Cargo.toml  Dockerfile  fly.staging.toml  fly.toml  relay.toml  relay.toml.example  run.sh  webhook-reload.hurl  webhooks.json.example  y-sweet-legacy-token-spec.md
crates/relay/: Cargo.toml
crates/relay/src/: main.rs  server.rs  webhook.rs
crates/relay/src/stores/: filesystem.rs
crates/relay/tests/: token_expiration_integration_test.rs
crates/specs/: cbor-data-format-migration.md  cwt-audience-claim-support.md  cwt-authentication-support.md  cwt-channel-claims.md  event-architecture-refactor.md  event-envelope-architecture.md  multi-key-authentication-support.md  subdoc-state-vector-index-client-guide.md  sync-protocol-event-delivery.md  toml-configuration-support.md  websocket-event-streaming.md
crates/y-sign/: Cargo.toml
crates/y-sign/src/: main.rs
crates/y-sweet/: Cargo.toml
crates/y-sweet-core/: Cargo.toml
crates/y-sweet-core/src/: api_types.rs  auth.rs  config.rs  cwt.rs  doc_connection.rs  doc_sync.rs  event.rs  lib.rs  metrics.rs  permanent_user_data.rs  sync_kv.rs  webhook.rs  webhook_metrics.rs
crates/y-sweet-core/src/store/: mod.rs  s3.rs
crates/y-sweet-core/src/sync/: mod.rs
crates/y-sweet-worker/src/: config.rs  lib.rs
crates/y-sweet/src/: cli.rs  main.rs  server.rs
crates/y-sweet/tests/: token_expiration_integration_test.rs
python/: README.md  pyproject.toml
python/src/relay_sdk/: __init__.py  error.py
