[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay_sdk"
version = "0.9.0"
description = "Python SDK for a relay.md"
readme = "README.md"
authors = [{ name = "Daniel Grossmann-Kavanagh", email = "daniel@relay.md" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.32.2",
    "pycrdt~=0.9.11",
]
requires-python = ">=3.12"

[project.optional-dependencies]
y-sign = []

[project.urls]
Homepage = "https://relay.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = [".", "src"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]
